# zcode

./: .mise.toml  Cargo.toml  README.md
lab/: .gitignore  .mise.toml
lab/.helix/: languages.toml
py-models/: .gitignore  main.py  pyproject.toml
rs-lsp/: Cargo.toml
rs-lsp/src/: main.rs
rs-models/: Cargo.toml
rs-models/src/: code_generation.rs  hf_load.rs  main.rs
src/: main.rs  profiler.rs
src/llm/: code_generation.rs  generator.rs  mod.rs
src/lsp/: mod.rs
