[package]
name = "zcode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "zc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0.148"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "io-std",
  "macros",
] }
tower-lsp = "0.20.0"

hf-hub = "0.4.3"
accelerate-src = "0.3.2"
candle-core = { version = "0.9.2-alpha.2", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9.2-alpha.2", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9.2-alpha.2", features = [
  "metal",
  "accelerate",
] }
tokenizers = "0.22.2"
