[package]
name = "zcode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "zc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

tokio = { version = "1.48", features = [
  "rt-multi-thread",
  "io-std",
  "macros",
] }
tower-lsp = "0.20"

hf-hub = "0.4"
accelerate-src = "0.3"
candle-core = { version = "0.9", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9", features = [
  "metal",
  "accelerate",
] }
tokenizers = "0.22"
