[package]
name = "rs-models"
version = "0.1.0"
edition = "2024"

[dependencies]
accelerate-src = "0.3.2"
anyhow = "1.0.100"
candle-core = { version = "0.9.2-alpha.2", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9.2-alpha.2", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9.2-alpha.2", features = [
  "metal",
  "accelerate",
] }

clap = { version = "4.5.53", features = ["derive"] }
hf-hub = "0.4.3"
serde_json = "1.0.146"
tokenizers = "0.22.2"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.22"
