[package]
name = "rs-models"
version = "0.1.0"
edition = "2024"

[dependencies]

hf-hub = "0.4.3"

accelerate-src = "0.3.2"
candle-core = { version = "0.9.2-alpha.2", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9.2-alpha.2", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9.2-alpha.2", features = [
  "metal",
  "accelerate",
] }
tokenizers = "0.22.2"

anyhow = "1.0.100"
serde_json = "1.0.146"
